# TVPy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  bash_build_pybind11.sh  pwsh_build_pybind11.ps1
TVPy/: CMakeLists.txt  TVPy.cpp  TVPy.hpp  TVPy.pyi  TVPyFile.cpp  TVPyFile.hpp  __init__.py
TVPy/structs/: TVPyClip.cpp  TVPyClip.hpp  TVPyCommon.hpp  TVPyFile.cpp  TVPyFile.hpp  TVPyFileInfo.cpp  TVPyFileInfo.hpp  TVPyLayer.cpp  TVPyLayer.hpp
doc/: doc_compile.md  doc_main.md
py_buildutils/: minimum_version.py  module_existence.py  pybind11folder.py  pybind11folder_cmake.py  pyfolder.py
